wdn/templates_3.0/css/footer/footer.css
/*
All styles for the footer
Created: 05/22/2009
Last edited: 05/20/2011
Author: WDN

#footer
    |
    |- #footer_floater
        |
        |- .footer_col
            |
            |- h3, p, a, img
        |- #copyright
            |
            |- ul>li, a, img
*/
@import url('feedback.css');
@import url('rating.css');
#footer {
    margin:15px -12px -12px -12px;
    position: relative;
    clear: both;
    background: #eee;
    background-position: 0 0px;
    background-size:0 95px;
    background-repeat: repeat-x;
    text-align: left;
    font-size:71%;
    line-height:150%;
    color: #494949;
    text-shadow:0px 1px 0px #f5f2ef;
    border-top:1px solid #f8f8f8;
    -webkit-box-shadow: 0px -1px 0px #cecece;
    -moz-box-shadow: 0px -1px 0px #cecece;
    box-shadow: 0px -1px 0px #cecece;
}
#footer a,
#footer a:link,
#footer a:visited {
    color: #494949;
    text-decoration:underline;
}

#footer a:hover
{
    color: #ba0000;
}

#footer_floater {
    background-image: url(images/topSealb.png);
    background-position: center;
    background-repeat: no-repeat;
    height:41px;
    width:984px;
    margin-top:-18px;
    position:absolute;
}
#footer_floater.showcase {
    background-image: url(images/topSealspotlight.png);
    height:75px;
    margin-top:-21px;
    cursor:pointer;
    margin-bottom:5px;
}
#wdn_copyright {
    clear: both;
    border-top:2px solid #fff;
    -webkit-box-shadow: 0px -1px 0px #cecece;
    -moz-box-shadow: 0px -1px 0px #cecece;
    box-shadow: 0px -1px 0px #cecece;
    padding: 15px 24px;
    color:#fff;
    line-height:1.6em;
    min-height:42px;
    background:#c00;
    border-radius:0 0 10px 10px;
    margin:-23px -12px;
    text-shadow:0px 1px 0px #730201;
    background-image: linear-gradient(top, #b70302 0%, #9d0201 100%);
    background-image: -moz-linear-gradient(top, #b70302 0%, #9d0201 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b70302), color-stop(100%,#9d0201));
}
#footer #wdn_copyright a {color:#fff;}
#wdn_copyright ul {
    margin-top:10px;
}
#wdn_copyright ul li {
    display:inline;
}
#wdn_logos {
    position:absolute;
    right:0px;
    bottom:12px;
}

#wdn_logos a,
#wdn_logos a:link,
#wdn_logos a:visited {
    border:none;
    vertical-align:baseline;
}
#wdn_logos #unl_wordmark {
    padding-right:6px;
    border-right:1px solid #c6c6c6;
    margin-right:9px;
    -webkit-box-shadow: 1px 0px 0px #9d0201;
    -moz-box-shadow: 0px 1px 0px #9d0201;
    box-shadow: 1px 0px 0px #9d0201;
    display:inline-block;
}
#wdn_logos #cic_wordmark {margin-left:10px;position:relative;bottom:-2px;}
#wdn_unl_wordmark{display:none;}
#footer .footer_col {
    width:222px;
    margin-top:50px;
    float:left;
    position:relative;
    margin-left: 24px;
    display:inline;
    margin-bottom:20px;
}
#footer .footer_col ul {
    list-style:none;    
}
#footer .footer_col ul li {
    margin:7px 0;
}
#footer .footer_col ul li a {
    background: #f2f1ed;
    background: -moz-linear-gradient(top, #efece9 0%, #f2f1ed 50%, #e7e4e3 51%, #e4e0dd 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efece9), color-stop(50%,#f2f1ed), color-stop(51%,#e7e4e3), color-stop(100%,#e4e0dd)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* Opera11.10+ */
    background: -ms-linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* IE10+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#EFECE9', endColorstr='#E4E0DD',GradientType=0 ); /* IE6-9 */
    background: linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* W3C */
    padding:3px 8px;
    border-radius:1em;
    border:1px solid #d5d5d5;
    text-decoration:none;
    -moz-background-clip: padding-box;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
}
#footer .footer_col ul li a:hover {
    background:#ac0302;
    color:#fff; 
    text-shadow:none;
}
#footer div ~ .footer_col{ /* override the first .footer_col */
    margin-left:12px;   
}
#footer div ~ .footer_col ~ .footer_col{ /* reset the rest */
    margin-left:24px; 
}
/* Experiment making the contact column stand out. This might be too much?
#footer > div:nth-of-type(4) {
    background:#dfdfdf;
    margin:38px -12px -12px 12px !important;
    padding:12px;   
    border-radius:5px;
}
*/
body.liquid #footer .footer_col {width:22.9%}   
    
#footer .footer_col h3 {
    margin-bottom:5px;
    font-size:2.2em;
    text-transform:uppercase;
    color:#6b6b6b;
    border-bottom:1px solid #cecece;
    text-align:center;
    padding:0.3em 0;
    margin-bottom:0.8em;
    font-family: 'URWGroteskCon-Lig';
    font-weight:normal;
    -webkit-box-shadow: 0px 1px 0px #ffffff;
    -moz-box-shadow: 0px 1px 0px #ffffff;
    box-shadow: 0px 1px 0px #ffffff;
}

/* Share this page */

#footer .footer_col ul.socialmedia {
    padding:0;
    list-style-type:none;
    border:1px solid #d5d5d5;
    border-radius:3px;
    display:inline-block;
    -moz-background-clip: padding-box;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    width:100%;
}
#footer .footer_col ul.socialmedia:hover li {
    
}   
#footer .footer_col ul.socialmedia li {
    display:inline-block;
    border:1px solid #f5f2ef;
    border-right:1px solid #d5d5d5;
    margin:0;
    float:left;
    text-transform:uppercase;
    font-size:11px;
    font-weight:bold;
    color:#6b6b6b;
    height:100%; 
    background: #efece9; /* Old browsers */
    background: -moz-linear-gradient(top, #efece9 0%, #f2f1ed 50%, #e7e4e3 51%, #e4e0dd 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efece9), color-stop(50%,#f2f1ed), color-stop(51%,#e7e4e3), color-stop(100%,#e4e0dd)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* Opera11.10+ */
    background: -ms-linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* IE10+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#EFECE9', endColorstr='#E4E0DD',GradientType=0 ); /* IE6-9 */
    background: linear-gradient(top, #efece9 0%,#f2f1ed 50%,#e7e4e3 51%,#e4e0dd 100%); /* W3C */
}
#footer .footer_col ul.socialmedia li:first-child{
    border-radius:3px 0 0 3px;
}
#footer .footer_col ul.socialmedia li:last-child {
    border-right:1px solid #f5f2ef;
    border-radius:0 3px 3px 0;
}
#footer .footer_col ul.socialmedia li a {
    float:left;
    border-radius:0;
    height:26px;
    border:none;
    padding:9px 6px 0px;
    text-align:center;
    width:82px;
}
#footer .footer_col ul.socialmedia li.outpost a {
    text-indent:-9999em;
    height:35px;
    width:40px;
    padding:0;
    background:url('images/socialMedia.png') no-repeat 8px 6px;
}
#footer .footer_col ul.socialmedia #wdn_facebook a {
    background-position:8px -27px;  
}
#footer .footer_col ul.socialmedia #wdn_twitter a {
    background-position:8px -61px; 
}
#footer .footer_col ul.socialmedia li:hover {
    background: #69ad77; /* Old browsers */
    background: -moz-linear-gradient(bottom, #69ad77 0%, #5ea36c 50%, #449955 51%, #358446 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,#69ad77), color-stop(50%,#5ea36c), color-stop(51%,#449955), color-stop(100%,#358446)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(bottom, #69ad77 0%,#5ea36c 50%,#449955 51%,#358446 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(bottom, #69ad77 0%,#5ea36c 50%,#449955 51%,#358446 100%); /* Opera11.10+ */
    background: -ms-linear-gradient(bottom, #69ad77 0%,#5ea36c 50%,#449955 51%,#358446 100%); /* IE10+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#69AD77', endColorstr='#358446',GradientType=0 ); /* IE6-9 */
    background: linear-gradient(bottom, #69ad77 0%,#5ea36c 50%,#449955 51%,#358446 100%); /* W3C */
}
#footer .footer_col ul.socialmedia li:first-child a:hover {background:none;}
#footer .footer_col ul.socialmedia #wdn_emailthis:hover {
    background: #b29e95; /* Old browsers */
    background: -moz-linear-gradient(bottom, #b29e95 0%, #9e867c 50%, #826d64 51%, #725447 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,#b29e95), color-stop(50%,#9e867c), color-stop(51%,#826d64), color-stop(100%,#725447)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(bottom, #b29e95 0%,#9e867c 50%,#826d64 51%,#725447 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(bottom, #b29e95 0%,#9e867c 50%,#826d64 51%,#725447 100%); /* Opera11.10+ */
    background: -ms-linear-gradient(bottom, #b29e95 0%,#9e867c 50%,#826d64 51%,#725447 100%); /* IE10+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#B29E95', endColorstr='#725447',GradientType=0 ); /* IE6-9 */
    background: linear-gradient(bottom, #b29e95 0%,#9e867c 50%,#826d64 51%,#725447 100%); /* W3C */
}
#footer .footer_col ul.socialmedia #wdn_facebook:hover {
    background: #6c89b7; /* Old browsers */
    background: -moz-linear-gradient(bottom, #6c89b7 0%, #5c78a8 50%, #4f6796 51%, #3b5998 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,#6c89b7), color-stop(50%,#5c78a8), color-stop(51%,#4f6796), color-stop(100%,#3b5998)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(bottom, #6c89b7 0%,#5c78a8 50%,#4f6796 51%,#3b5998 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(bottom, #6c89b7 0%,#5c78a8 50%,#4f6796 51%,#3b5998 100%); /* Opera11.10+ */
    background: -ms-linear-gradient(bottom, #6c89b7 0%,#5c78a8 50%,#4f6796 51%,#3b5998 100%); /* IE10+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6C89B7', endColorstr='#3B5998',GradientType=0 ); /* IE6-9 */
    background: linear-gradient(bottom, #6c89b7 0%,#5c78a8 50%,#4f6796 51%,#3b5998 100%); /* W3C */
    }
#footer .footer_col ul.socialmedia #wdn_twitter:hover   {
    background: #a9d1fc; /* Old browsers */
    background: -moz-linear-gradient(bottom, #a9d1fc 0%, #96c8ff 50%, #76b5fc 51%, #4099ff 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,#a9d1fc), color-stop(50%,#96c8ff), color-stop(51%,#76b5fc), color-stop(100%,#4099ff)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(bottom, #a9d1fc 0%,#96c8ff 50%,#76b5fc 51%,#4099ff 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(bottom, #a9d1fc 0%,#96c8ff 50%,#76b5fc 51%,#4099ff 100%); /* Opera11.10+ */
    background: -ms-linear-gradient(bottom, #a9d1fc 0%,#96c8ff 50%,#76b5fc 51%,#4099ff 100%); /* IE10+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A9D1FC', endColorstr='#4099FF',GradientType=0 ); /* IE6-9 */
    background: linear-gradient(bottom, #a9d1fc 0%,#96c8ff 50%,#76b5fc 51%,#4099ff 100%); /* W3C */ 
} 
#footer input#goURLResponse {
    width:89px;
    padding:0 0 0 5px;
    color:#494949;
    border:0;
    height:35px;
    text-decoration:none;
    border-radius:0;
}

